# Autonomous-Navigation

./: 3rd_Rewriteinonefile.py  3rd_Rewriteinonefile_2.0.py  Main.py  Notes.txt  Rewriteinonefile.py  as.py  as2.py  as3.py  as4.py  as6.py  as8.py  as9-2.py  as9.py  gemini.py  gemini1.py  gemini2.py  gemini3.py  goal.txt  main.py  main_100.py  map_data.json  map_data_cleaned.json  maze1.py  maze2.py  maze3.py  maze4.py  maze5.py  mazelib1.py  mazelib2.py  mazelib3.py  plane_maker.py  regen_cache.py  road_layout.urdf  script.py  sim1.py  simple_truck.urdf  some_basic.py  some_truck.urdf  sumo.rou.xml  truck_system.py  (+14 more)
2nd_Python_code/: Main.py  TruckSim.py
Elevation/: elevation_editor.py
MAP/: Coal_Mine_Editor.py  Map_Editor.py  Waypoint_Editor.py  generate_map_cache.py  generate_map_data_json.py  main.py  map_cache.pkl  map_storage.py  map_ui.py  map_viewer.py  session_tracker.py  test_waypoint_viewer.py  unified_map_launcher.py  waypoint_viewer.py
MAP_Panda3D/: ALIGNMENT_ANALYSIS.txt  ANALYSIS.txt  ELEVATION_INTEGRATION.txt  REGRESSION_FIX_ANALYSIS.txt  coal_mine_editor.py  elevation_editor_mode.py  generate_map_cache.py  generate_map_data_json.py  main.py  map_editor.py  map_storage.py  map_ui.py  map_viewer.py  panda_common.py  panda_elevation.py  session_tracker.py  test_waypoint_viewer.py  (+2 more)
Reference/mpc/: MUJOCO_LOG.TXT  README.md  env.yml  pyproject.toml
Reference/mpc/mpc_python/: mpc_demo_mujoco.py  mpc_demo_nosim.py
Reference/mpc/mpc_python/cvxpy_mpc/: __init__.py  cvxpy_mpc.py  utils.py
Reference/mpc/notebooks/: 1.0-linearised-system-modelling.ipynb
(+172 files in other folders)
