[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mpc-python"
version = "0.1.0"
description = "Model Predictive Control for path-following problems"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "matplotlib",
    "mujoco",
    "cvxpy",
    "scipy",
    "osqp",
    "sympy",
    "pyyaml",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4",
    "ipython",
    "ipywidgets",
    "nbformat",
    "nbconvert",
]
dev = [
    "black>=24",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
